<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="carnet">Carnet</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Teléfono</string>
    <string name="dui">DUI</string>
    <string name="nit">NIT</string>
    <string name="email">E-mail</string>
    <string name="guardar">Guardar</string>
    <string name="actualizar">Actualizar</string>
    <string name="datos">Datos</string>
    <string name="buscar">Buscar</string>
    <string name="eliminar">Eliminar</string>
    <string name="acceso">Servicio Social</string>
    <string name="boton1">Alumno</string>
    <string name="boton2">AsignacionProyecto</string>
    <string name="action_settings">Settings</string>
    <string name="bienvenido">Bienvenido! Ingrese sus datos</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="alumno">Alumno</string>
    <string name="proyecto">Proyecto</string>
    <string name="fecha">Fecha</string>
    <string name="asignar">Asignar</string>
    <string name="buscarpor">Buscar por:</string>
    <string name="actualizarpor">Actualizar por:</string>
    <string name="eliminarpor">Eliminar por:</string>
    <string name="ingresar">Ingresar</string>
    <string name="tipoProyecto">Tipo Proyecto</string>
    <string name="title_activity_menu_tablas">Menú Principal</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_menu_alumno">Alumno</string>
    <string name="title_activity_alumno_insertar">AlumnoInsertarActivity</string>
    <string name="title_activity_alumno_consultar">AlumnoConsultarActivity</string>
    <string name="title_activity_alumno_actualizar">AlumnoActualizarActivity</string>
    <string name="title_activity_alumno_eliminar">AlumnoEliminarActivity</string>
    <string name="title_activity_asignacion_proyecto_menu">Asignación de Proyecto</string>
    <string name="title_activity_asignacion_proyecto_insertar">AsignacionProyectoInsertarActivity</string>
    <string name="title_activity_asignacion_proyecto_consultar">AsignacionProyectoConsultarActivity</string>
    <string name="title_activity_asignacion_proyecto_eliminar">AsignacionProyectoEliminarActivity</string>
    <string name="title_activity_asignacion_proyecto_actualizar">AsignacionProyectoActualizarActivity</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="button3">Proyecto</string>

    <!-- Lista de titulos de navegacion -->
    <string-array name="nav_options">
        <item>Alumno</item>
        <item>Asignacion De Proyecto</item>
        <item>Bitacora</item>
        <item>Cargo</item>
        <item>Encargado Social</item>
        <item>Institucion</item>
        <item>Proyecto</item>
        <item>Solicitante</item>
        <item>Tipo Proyecto</item>
        <item>Tipo Trabajo</item>
    </string-array>
    <!-- Lista de iconos de navegacion -->
    <array name="navigation_iconos">
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_action_labels</item>
        <item>@drawable/ic_action_event</item>
        <item>@drawable/ic_action_star</item>
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_action_home</item>
        <item>@drawable/ic_action_event</item>
        <item>@drawable/ic_action_user</item>
        <item>@drawable/ic_action_event</item>
        <item>@drawable/ic_action_settings</item>
    </array>

    <string name="drawer_open">Menu de Tablas</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_proyecto_insertar">ProyectoInsertarActivity</string>
    <string name="title_activity_proyecto_menu">Proyecto</string>
    <string name="title_activity_navigation_drawer_menu">NavigationDrawerMenuActivity</string>
    <string name="idProyecto">ID Proyecto</string>
    <string name="nombreProyecto">Nombre Proyecto</string>
    <string name="nombreTipoProyecto">Nombre Tipo Proyecto</string>
    <string name="CodigoSolicitante">ID Solicitante</string>
    <string name="CodigoTipoProyecto">ID Tipo Proyecto</string>
    <string name="CodigoEncargadoProyecto">ID Encargado Proyecto</string>
    <string name="Encargado">Encargado del Proyecto</string>
    <string name="opciones">Opciones</string>
    <string name="insertar">Insertar</string>
    <string name="limpiar">Limpiar</string>
    <string name="title_activity_proyecto_consultar">ProyectoConsultarActivity</string>
    <string name="consultar">Consultar</string>
    <string name="title_activity_solicitante_insertar">SolicitanteInsertarActivity</string>
    <string name="solicitante">Solicitante</string>
    <string name="institucion">Institución</string>
    <string name="title_activity_solicitante_eliminar">SolicitantenEliminarActivity</string>
    <string name="idSolicitante">ID Solicitante</string>
    <string name="title_activity_solicitante_consultar">SolicitanteConsultarActivity</string>
    <string name="title_activity_solicitante_actualizar">SolicitanteActualizarActivity</string>
    <string name="title_activity_solicitante_menu">Solicitante</string>
    <string name="title_activity_institucion_menua">Institución</string>
    <string name="title_activity_institucion_insertar">InstitucionInsertarActivity</string>
    <string name="title_activity_institucion_consultar">InstitucionConsultarActivity</string>
    <string name="title_activity_institucion_actualizar">InstitucionActualizarActivity</string>
    <string name="title_activity_institucion_eliminar">InstitucionEliminarActivity</string>
    <string name="title_activity_institucion_menu">Institución</string>
    <string name="institucionNombre">Nombre Institución</string>
    <string name="title_activity_actualizar_proyecto">ActualizarProyectoActivity</string>
    <string name="mensaje">Ingrese el ID del Proyecto</string>
    <string name="title_activity_proyecto_elimini">ProyectoEliminiActivity</string>
    <string name="title_activity_encargado_menu">Encargado de Servicio Social</string>
    <string name="title_activity_encargado_insertar">Insertar Encargado</string>
    <string name="title_activity_encargado_consultar">Consultar Encargado</string>
    <string name="title_activity_encargado_actualizar">Actualizar Encargado</string>
    <string name="title_activity_encargado_eliminar">Eliminar Encargado</string>
    <string name="bitacora">Bitacora</string>
    <string name="title_activity_bitacora_menu">Bitacora</string>
    <string name="title_activity_bitacora_insertar">BitacoraInsertarActivity</string>
    <string name="title_activity_bitacora_consultar">BitacoraConsultarActivity</string>
    <string name="title_activity_bitacora_actualizar">BitacoraActualizarActivity</string>
    <string name="title_activity_bitacora_eliminar">BitacoraEliminarActivity</string>
    <string name="title_activity_tipo_proyecto_menu">Tipo Proyecto</string>
    <string name="title_activity_tipo_proyecto_insertar">TipoProyectoInsertarActivity</string>
    <string name="title_activity_tipo_proyecto_actualizar">TipoProyectoActualizarActivity</string>
    <string name="title_activity_tipo_proyecto_consultar">TipoProyectoConsultarActivity</string>
    <string name="title_activity_tipo_proyecto_eliminar">TipoProyectoEliminarActivity</string>
    <string name="title_activity_cargo_menu">Cargo</string>
    <string name="title_activity_cargo_insertar">Insertar Cargo</string>
    <string name="title_activity_cargo_actualizar">Actualizar Cargo</string>
    <string name="title_activity_cargo_consultar">Consultar Cargo</string>
    <string name="title_activity_cargo_eliminar">Eliminar Cargo</string>
    <string name="facultad">Facultad</string>
    <string name="cargo">Cargo del solicitante</string>
    <string name="idEncargado">ID de Encargado</string>
    <string name="escuela">Escuela</string>
    <string name="idCargo">ID Cargo</string>
    <string name="atras">Anterior</string>
    <string name="adelante">Siguiente</string>
    <string name="criterioBusqueda">Seleccione un criterio de busqueda</string>

    <string-array name="camposArrayEncargado">
        <item> ID Encargado</item>
        <item> Nombre</item>
        <item> Email</item>
        <item> Telefono</item>
        <item> Facultad</item>
        <item> Escuela</item>
    </string-array>
    <string-array name="camposArrayCargo">
        <item> ID Cargo</item>
        <item> Nombre</item>
    </string-array>

    <string name="idTipoTrabajo">Id Tipo de Trabajo</string>
    <string name="descripcion">Descripcion</string>
    <string name="idBitacora">Id Bitacora</string>
    <string name="title_activity_tipo_trabajo">Tipo Trabajo</string>
    <string name="title_activity_tipo_trabajo_insertar">Inserta Tipo de Trabajo</string>
    <string name="title_activity_tipo_trabajo_modificar">Modificar Tipo de Trabajo</string>
    <string name="title_activity_tipo_trabajo_consultar">Consultar Tipo de Trabajo</string>
    <string name="title_activity_tipo_trabajo_eliminar">Eliminar Tipo de Trabajo</string>
    <string name="nitInstitucion">NIT Institución</string>
    <string name="nuevoNit">Nuevo NIT</string>
    <string name="tipoTrabajo">Tipo Trabajo</string>
    <string name="valor">$</string>
    <string name="title_activity_pantalla_inicial">Menú de Tablas</string>
    <string name="numeroProyectos">Número de Proyectos</string>
    <string name="insertarqr">Insertar datos por QR</string>
    
    <string name="imagen">imagen</string>
    <string name="tomarFoto">Tomar Foto</string>
    <string name="fotografia">Fotografia del Alumno</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="app_name">servicio social</string>
    <string name="insertarServidor">Insertar a Servidor</string>    
    <string name="printAlumnos">Imprimir registros</string>
    
    

</resources>