<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MenuTablasActivity" >

    <Button
        android:id="@+id/btnActualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/botonBitacora"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button2"
        android:text="@string/alumno" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button3"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/btnActualizar"
        android:layout_marginRight="51dp"
        android:text="@string/boton2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnSolicitante"
        android:layout_alignRight="@+id/btnSolicitante"
        android:layout_below="@+id/button2"
        android:text="@string/button3" />

    <Button
        android:id="@+id/btnSolicitante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnInstitucion"
        android:layout_alignRight="@+id/btnInstitucion"
        android:layout_below="@+id/button3"
        android:text="@string/solicitante" />

    <Button
        android:id="@+id/btnInstitucion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnEncargado"
        android:layout_alignRight="@+id/btnEncargado"
        android:layout_below="@+id/btnSolicitante"
        android:text="@string/institucion" />

    <Button
        android:id="@+id/btnEncargado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnInstitucion"
        android:text="@string/Encargado" />

    <Button
        android:id="@+id/botonBitacora"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnEncargado"
        android:layout_alignRight="@+id/button2"
        android:layout_below="@+id/btnEncargado"
        android:text="@string/bitacora" />
    
    <Button
        android:id="@+id/btnTipoProyecto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnActualizar"
        android:layout_alignRight="@+id/btnEncargado"
        android:layout_below="@+id/botonBitacora"
        android:text="@string/tipoProyecto" />
    
    
 <Button
          android:id="@+id/btnCargo"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_alignLeft="@+id/btnTipoProyecto"
          android:layout_below="@+id/btnTipoProyecto"
          android:text="@string/cargo" />

</RelativeLayout>
