<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sv.edu.ues.fia.appserviciosocial.InstitucionActualizarActivity"
    tools:ignore="MergeRootFrame" >

    <EditText
        android:id="@+id/editActNitInstitucion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/nit" 
        android:inputType="number">

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnActBuscarInstitucion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editActNitInstitucion"
        android:layout_centerHorizontal="true"
        android:onClick="buscarInstitucion"
        android:text="@string/buscar"
        android:background="@drawable/btn_actualizar"
        android:padding="5dp"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btnActualizarInstitucion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_actualizar"
        android:onClick="actualizarInstitucion"
        android:padding="5dp"
        android:text="@string/actualizar"
        android:textColor="@android:color/white" />

    <EditText
        android:id="@+id/editActNombreInstitucion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnActBuscarInstitucion"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="text"
        android:onClick="actualizarInstitucion" />

    <EditText
        android:id="@+id/editNuevoNit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editActNombreInstitucion"
        android:layout_below="@+id/editActNombreInstitucion"
        android:ems="10"
        android:hint="@string/nuevoNit"
        android:inputType="number" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editNuevoNit"
        android:layout_below="@+id/editNuevoNit"
        android:ems="10"
        android:hint="@string/latitud" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:ems="10"
        android:hint="@string/longitud" />

</RelativeLayout>